Link design system CSS to base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,12 @@
     <meta name="description" content="Luxury homeowner platform connecting you with trusted real estate professionals" />
 
     <!-- Main CSS -->
+    <!-- Design System Foundation -->
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/design-system.css') }}"
+    />
+    <!-- Custom Styles -->
     <link
       rel="stylesheet"
       href="{{ url_for('static', filename='css/styles.css') }}"
